no progress on grading urls byet..

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="span2 logo">
                     Logo
                 </div>
-                <div class="span6 blanc">
+                <div class="span6 blank">
                     Blanc
                 </div>
                 <div class="span4 about">
