--- a/index.html
+++ b/index.html
@@ -38,16 +38,23 @@
             
             /* main body and headings */
             body {
-                padding-top: 20px;
-                padding-bottom: 40px;
+                font-family: 'Open Sans', Helvetica, Arial, sans-serif;
             }
 
-            .container {
-                width: 960px;
+            .heading, .subheading {
+                font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+                text-align: center;
             }
 
             p.lead {
-                padding-top: 15px;
+                padding-top: 1.5%;
+                font-size: 24px;
+                line-height: 30px;
+            }
+
+            p {
+                font-size: 18px;
+                line-height: 24px;
             }
             
             .navigation, .pitch, .section1, .section2, .faq, .footer {
@@ -91,7 +98,26 @@
             </div>
         </div>
 
+        <!-- We use row-fluid inside containers to achieve a resizable layout. -->
+        <!-- blogs.endjin.com/2013/04/tips-for-implementing-responsive-designs-using-bootstrap-->
+        <!-- http://stackoverflow.com/a/12270322 -->
         <div class="container">
+            <!-- Font and paired font of .heading/.subheading and body from Google Fonts -->
+            <!-- google.com/fonts/specimen/Ubuntu-->
+            <!-- google.com/fonts/specimen/Ubuntu#pairings -->
+            <div class="row-fluid heading">
+                <div class="span12">
+                    <h1>Product</h1>
+                </div>
+            </div>
+            <div class="row-fluid subheading">
+                <div class="span12">
+                    <!-- Special typography from Bootstrap for lead paragrpaph-->
+                    <!-- twitter.hithub.io/bootstrap/base-css.html#typography -->
+                    <p class="lead"> One sentence description</p>
+                </div>
+            </div>
+
             <div class="row navigation">
                 <div class="span2 logo">
                     Logo
