--- a/index.html
+++ b/index.html
@@ -225,7 +225,11 @@
                     <p>
                         Our idea is to take the techniques of USSR special mathematical schools online and make them accessible to the whole globe.
                     </p>
-                       <p>
+                    <br>
+                    <p>
+                        Here is the description of said methodology.
+                    </p>
+                    <p>
                         a) <i>Everything-in-problems</i> approach.
                         <br>
                         The student gets a <i>sheet</i>, say called “X theory”, in which definitions of “X object” and “Y property” are given with a set of problems. Solving the problems the student builds the whole X theory by themselves. Some of the problems ask to prove a theorem, or ask if a statement is true. Some are for practice, they build skills and methods relevant to X theory. Average time to solve a sheet - about 2 weeks.
