--- a/index.html
+++ b/index.html
@@ -501,65 +501,16 @@
                     </p>
                 </div>
             </div>
-
         </div>
+        <!-- Google analytics. -->
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-55884725-2', 'auto');
+          ga('send', 'pageview');
+        </script>
     </body>
 </html>
-            <!-- old simple page
-            <div class="row navigation">
-                <div class="span2 logo">
-                    Logo
-                </div>
-                <div class="span6 blank">
-                    Blanc
-                </div>
-                <div class="span4 about">
-                    About
-                </div>
-            </div>
-            <div class="row heading">
-                <div class="span12">
-                    <h1>Bitstarter Title</h1> 
-                </div>
-            </div>
-            <div class="row subheading">
-                <div class="span12">
-                    <p class="lead"> This is my first bitstarter project</p> 
-                </div>
-            </div>
-            <div class="row pitch">
-                <div class="span6 video">
-                    Video
-                </div>
-                <div class="span6">
-                    <div class="thermometer">
-                        Thermometer
-                    </div>
-                    <div class="order">
-                        Order
-                    </div>
-                    <div class="social">
-                        Social
-                    </div>
-                </div>
-            </div>
-            <div class="row section1">
-                <div class="span12">
-                    Marketing section 1
-                </div>
-            </div>
-            <div class="row section2">
-                <div class="span12">
-                    Marketing section 2
-                </div>
-            </div>
-            <div class="row faq">
-                <div class="span12">
-                    FAQ
-                </div>
-            </div>
-            <div class="row footer">
-                <div class="span12">
-                    Footer
-                </div>
-            </div> -->
