make the text more readable by adding offsets

--- a/index.html
+++ b/index.html
@@ -214,13 +214,16 @@
 
 
             <div class="row-fluid section2">
-                <div class="span12 copy">
+                <div class="span6 offset3 copy">
                     <p>
                         There is a large number of strong mathematicians (and other natural scientists) of russian origin. This is no coincidence. What is not widely known is that most (if not all) of them come from a relatively small interconnected community. During the second half of 20th century a specific methodology for teaching math was developed in Russia. I don’t have exact numbers, but I think I wouldn’t be far off, if I say that about a half of famous russian mathematicians come from the same small set of High Schools including about four in Moscow and two in St. Petersburg (see Chapter 5, Section 2, p.191, par. 2-3, in the book <a href="http://goo.gl/T2hyDs"> "Russian Mathematics education. History and world significance."</a>)
                     </p>
                     <p>
                         Our idea is to take the techniques of USSR special mathematical schools online and make them accessible to the whole globe.
                     </p>
+                    <br>
+                    <br>
+                    <br>
                     <br>
                     <p>
                         Here is the description of said methodology.
