added last script for google analytics right before </head>

--- a/index.html
+++ b/index.html
@@ -170,6 +170,21 @@
               margin: 0 auto;
             }
         </style>
+
+        <script type="text/javascript">
+
+          var _gaq = _gaq || [];
+          _gaq.push(['_setAccount', 'UA-55884725-2']);
+          _gaq.push(['_trackPageview']);
+
+          (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+          })();
+
+        </script>
+
     </head>
 
 
@@ -394,7 +409,7 @@
                         <!-- standart bootstrap button, twitter.github.io/bootstrap/base-css.html#buttons-->
                         <button class="btn btn-success btn-large">Preorder</button>
                     </div>
-                    <div class="span8 offset2 social" style="padding-top:5px">
+                    <div class="span8 offset2 social">
                         <!-- Go to www.addthis.com/dashboard to customize your tools -->
                         <div class="addthis_sharing_toolbox"></div>
                     </div>
