--- a/index.html
+++ b/index.html
@@ -383,12 +383,12 @@
                                     <h3>1000</h3> <p>backers</p>
                                 </div>
                             </div>
-                            <div class="span4">
+                            <div class="span5">
                                 <div class="linediv-c">
                                     <h3>$6000000</h3> <p>of $10000000</p>
                                 </div>
                             </div>
-                            <div class="span4">
+                            <div class="span3">
                                 <div class="linediv-r">
                                     <h3>10</h3> <p>days left</p>
                                 </div>
@@ -407,7 +407,10 @@
                     
                     <div class="span6 offset3 order">
                         <!-- standart bootstrap button, twitter.github.io/bootstrap/base-css.html#buttons-->
-                        <button class="btn btn-success btn-large">Preorder</button>
+                        <a class="coinbase-button" 
+                        data-button-style="custom_large"
+                        data-button-text="Preorder with Bitcoin"
+                        data-code="7372a4b674c420cb1b203bcab58f8c66" href="https://www.coinbase.com/checkouts/7372a4b674c420cb1b203bcab58f8c66">Donate Bitcoin</a><script src="https://www.coinbase.com/assets/button.js" type="text/javascript"></script>
                     </div>
                     <div class="span8 offset2 social">
                         <!-- Go to www.addthis.com/dashboard to customize your tools -->
