--- a/index.html
+++ b/index.html
@@ -173,6 +173,20 @@
 
         <script type="text/javascript">
 
+          var _gaqArtem = _gaqArtem || [];
+          _gaqArtem.push(['_setAccount', 'UA-56745698-1']);
+          _gaqArtem.push(['_trackPageview']);
+
+          (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+          })();
+
+        </script>
+        
+        <script type="text/javascript">
+
           var _gaq = _gaq || [];
           _gaq.push(['_setAccount', 'UA-55884725-2']);
           _gaq.push(['_trackPageview']);
@@ -458,40 +472,6 @@
                 <br>
             </div>
 
-
-            <div class="row-fluid section2">
-                <div class="span4">
-                    <p>
-                <!--         A demonstration of bootstrap offsets and spans:
-                        <br>
-                        <br> -->
-                       div class="span5 asset" 
-                       <br>
-                        <br>
-                       Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                    </p>
-                </div>
-                <div class="span3 offset2">
-                    <p>
-                        div class="span3 offset2"
-                        <br>
-                        <br>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                    </p>
-                </div>
-                <div class="span2 offset1">
-                    <p>
-                        The sum of all offsets and spans in is 12, because we have 12 columns in bootstrap.
-                        <br>
-                        <br>
-                        div class="span2 offset1"
-                        <br>
-                        <br>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                    </p>
-                </div>
-            </div>
-
             <!-- For the FAQ, we introduce a little bit of JS, using accordion-->
             <!-- this brings jquery.js and bootstrap.js as dependencies-->
             <!-- twitter.github.io/bootstrap/javascript.html#collaps -->
@@ -542,6 +522,16 @@
             </div>
         </div>
         <!-- Google analytics. -->
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-56745698-1', 'auto');
+          ga('send', 'pageview');
+
+        </script>
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
